tests/semantic/error_deduce_type/error_deduce_type.dl
.decl foo(a: number, b: number)
.decl bar(a: symbol, b: number)

foo(1, 2).
bar(a, b) :-
    foo(a, b).
